fix: opentitles fullscreen zoom on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,12 +10,6 @@
   height: 100%;
   flex-shrink: 0;
 }
-@media (max-width: 767px) {
-  .intro-video-box {
-    width: 100%;
-    height: 80vh;
-  }
-}
 
 html { scroll-behavior: smooth; overflow-x: hidden; max-width: 100vw; }
 
